--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Copyright (C) 2015 by Marijn Haverbeke <marijnh@gmail.com> and others
   </p>
   <p>
     clike: all C languages
-    <br> gfm: github-flavored markdown
+    <br> Please make sure to use the editor properly
     <br> htmlmixed: html with javascript
     <br> ctrl-space for autocompletion
     <br> ctrl-s for saving
